Test&Correct text-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,13 @@ section h2:nth-child(2) {
 .capitalize {
   text-transform: capitalize;
 }
+
 .button {
+  display: inline-block;
+  min-width: 50px;
+  width: 100%;
+  max-width: 150px;
+  height: 50px;
   padding: 10px 20px;
   border: 1px solid var(--main-color);
   border-radius: 10px;
@@ -41,6 +47,7 @@ section h2:nth-child(2) {
   text-decoration: none;
   color: var(--main-color);
 }
+
 .button:hover {
   background: var(--main-color);
   color: #fff;
@@ -50,7 +57,6 @@ section h2:nth-child(2) {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
 .section-main {
   display: block;
 }
